# scope

./: .clang-tidy  .gitmodules  CMakeLists.txt  CMakePresets.json
libs/: CMakeLists.txt
shaders/: vert.glsl
source/: CMakeLists.txt  graphics.c  graphics.h  loop.c  loop.h  main.c  mesh.c  mesh.h  obj_loader.c  obj_loader.h  shader.c  shader.h  shader_program.c  shader_program.h  util.h  vec.h
